# ChangeLog for sci-biology/afni
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  17 Jun 2015; Horea Christian <h.chr@mail.ru> afni-9999.ebuild:
  renamed variable to correct name

  17 Jun 2015; Horea Christian <h.chr@mail.ru> afni-9999.ebuild:
  corrected patch path

  17 Jun 2015; Horea Christian <h.chr@mail.ru> afni-9999.ebuild:
  using eutils eclass for epatch

  17 Jun 2015; Horea Christian <h.chr@mail.ru> afni-9999.ebuild:
  corrected path

  17 Jun 2015; Horea Christian <h.chr@mail.ru> afni-9999.ebuild:
  switching to neurodebian cmake build

  04 Jun 2015; Horea Christian <h.chr@mail.ru> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  added new dep  x11-libs/libXi

  04 Jun 2015; Horea Christian <h.chr@mail.ru> afni-9999.ebuild:
  afni's GH has moved

  04 Jun 2015; Horea Christian <h.chr@mail.ru> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  added new dep x11-libs/libXft

  13 Apr 2015;  <chymera@gentoo.org> afni-9999.ebuild:
  removed blank line

  08 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  reorganized dependencies, added unadded deps to 9999

  07 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild:
  removed double dependency entry

  05 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  solving binary conflicts

  03 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  added deps

  03 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  hackin INSTALLDIR to substitute for LIBDIR

  03 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  setting LIBDIR and compiling without target directory

  03 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild:
  typo

  02 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,
  afni-9999.ebuild:
  using $(getlib_dir) correctly

  02 Apr 2015;  <chymera@gentoo.org> afni-0_pre20130927.ebuild,