@@ -37,9 +37,13 @@ DEPEND="${RDEPEND}
 	app-shells/tcsh"
 
 S=${WORKDIR}/${P}
-
+PATCH_DIR="debian/patches"
 
 src_prepare() {
-	EPATCH_SOURCE="${S}/debian/patches/cmake_*" \
-        EPATCH_FORCE="yes" epatch
+	cd "${S}/${PATCH_DIR}"
+	while read PATCH_FILE; do
+		if  [[ $PATCH_FILE == cmake* ]] ; then
+  			epatch "${S}/${PATCH_DIR}/${PATCH_FILE}"
+		fi
+	done <series
 }
