@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Jun 2015; Chymera <chymera@gentoo.org> afni-9999.ebuild:
+  bash script to apply patches
+
   17 Jun 2015; Horea Christian <h.chr@mail.ru> afni-9999.ebuild:
   renamed variable to correct name
 
